fix(Button): change button alignment from center to flex-start

--- a/.vitepress/theme/styles/components/Button.scss
+++ b/.vitepress/theme/styles/components/Button.scss
@@ -3,7 +3,7 @@
 .MaterialButton {
   display: inline-flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 
   position: relative;
 
